# AI_tools

./: .gitignore  README.md  extract_text_from_image.py
html_to_markdown/: Vegan_Black_Pepper_Tofu_Recipe.md  Vegan_Black_Pepper_Tofu_Recipe_-_Shane_&_Simple.md  hello.py  html2markdown.py  pyproject.toml  source.html
local_rag/: Makefile  README.md  app.py  biorxiv_downloader.py  config.yaml  pyproject.toml  research_papers.txt  topics.yaml
local_rag/.github/workflow/: ci.yml
poster_summary/: README.md  poster_summary.py
transcriber/: .env.example  Code Citations.md  Dockerfile  INSTALL.md  README.md  TODO  api_cost.py  app.py  cleanup.py  docker-compose.yml  dump_db.py  pyproject.toml  requirements.txt  user_auth.py
transcriber/static/css/: style.css
transcriber/templates/: index.html  login.html  profile.html  signup.html
zillow_scraper/: main.py  models.py  property_details.csv  pyproject.toml  requirements.txt  scraper.py
