[project]
name = "html-to-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.1.8",
    "htmlx>=0.0.3",
    "markitdown>=0.0.1a3",
    "openai>=1.59.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
