[project]
name = "transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "google-genai>=1.9.0",
    "moviepy>=2.1.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "werkzeug>=3.1.3",
    "flask-session>=0.5.0",
]
